# skill-migration-automation

./: .gitignore  00-product-brief.md  01-team-roles.md  02-task-breakdown.md  03-architecture.md  04-implementation-plan.md  README.md  pyproject.toml
app/: __init__.py  contracts.py  llm.py  main.py  pack_loader.py  packs.py  pipeline.py  schemas.py  verifiers.py
app/stages/: __init__.py  _pending.py  base.py  ingest.py  plan.py  pr.py  profile.py  repair.py  report.py  scope.py  transform.py  verify.py
demo/sample-repo/: README.md  greeting.py
demo/sample-repo/tests/: test_greeting.py
packs/: client-call-upgrade.yaml  config-value-upgrade.yaml  python-support-3.14-upgrade.yaml  rename-greeting.yaml
tests/: __init__.py  contract_fixtures.py  test_genericity.py  test_integration_role_c.py  test_live_smoke.py  test_llm.py  test_mvp_pipeline.py  test_packs.py  test_pipeline.py  test_pr.py  test_role_b.py  test_schemas.py  test_scope.py  test_transform.py
tests/fixtures/: ingest.json  plan.json  pr.json  profile.json  repair.json  report.json  scope.json  transform.json  verify.json
tests/fixtures/llm/client-call-upgrade/: plan.json  transforms.json
tests/fixtures/llm/config-value-upgrade/: plan.json  transforms.json
