[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "refer-migration-agent"
version = "0.1.0"
description = "A specification-driven, technology-agnostic migration pipeline"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pydantic>=2.3,<3",
  "PyYAML>=6,<7",
  "tomli>=2,<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
refer-migrate = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]
